bugfix: deploy github action dockerfile path
Signed-off-by: Niels Bantilan <niels.bantilan@gmail.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,4 +37,4 @@ jobs:
           image_tag: ${{ env.PROJECT }}-${{ github.sha }},${{ env.PROJECT }}-latest
           registry: ${{ env.PROJECT }}
           context: ./${{ env.PROJECT }}
-          dockerfile: ./${{ env.PROJECT }}/Dockerfile
+          dockerfile: Dockerfile
