--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,8 @@ jobs:
           # https://docs.github.com/en/packages/learn-github-packages/publishing-a-package
           username: ${{ secrets.UNIONAI_OSS_BOT_USERNAME }}
           password: ${{ secrets.UNIONAI_OSS_BOT_PASSWORD }}
-          image_name: ${{ github.repository_owner }}/${{ github.repository }}
+          image_name: ${{ github.repository }}
           image_tag: ${{ env.PROJECT }}-${{ github.sha }},${{ env.PROJECT }}-latest
-          registry: ${{ env.PROJECT }}
+          registry: ${{ env.REGISTRY }}
           context: ./${{ env.PROJECT }}
           dockerfile: Dockerfile
