--- a/onboarding/Dockerfile
+++ b/onboarding/Dockerfile
@@ -1,21 +1,16 @@
 # 🐳📦 Docker containers unlock OS-level reproducibility 🔄
+# docker build -t localhost:30000/onboarding:v0.1 .
+# localhost:30000 is the registry that comes with flytectl demo start, you'll have to push after building
 FROM python:3.9-slim-buster
 
 WORKDIR /root
-ENV VENV /opt/venv
 ENV LANG C.UTF-8
 ENV LC_ALL C.UTF-8
 ENV PYTHONPATH /root
 ENV GIT_PYTHON_REFRESH quiet
 
-RUN apt-get update && apt-get install -y build-essential
+RUN apt-get update && apt-get install -y build-essential vim git
 RUN pip3 install awscli
-
-ENV VENV /opt/venv
-
-# Virtual environment
-RUN python3 -m venv ${VENV}
-ENV PATH="${VENV}/bin:$PATH"
 
 # Install Python dependencies
 COPY ./requirements.txt /root
@@ -24,8 +19,3 @@ RUN pip install -r /root/requirements.txt
 # Copy the actual code
 COPY . /root
 RUN pip install -e /root
-
-# This tag is supplied by the build script and will be used to determine the version
-# when registering tasks, workflows, and launch plans
-ARG tag
-ENV FLYTE_INTERNAL_IMAGE $tag
